--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   flutter_screenutil: ^4.0.3+2
   keyboard_avoider: ^0.1.2
+  sms_retriever_api: ^0.0.2
 
 
 dev_dependencies:
