--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   flutter_screenutil: ^4.0.3+2
   keyboard_avoider: ^0.1.2
   sms_retriever_api: ^0.0.2
+  http: ^0.12.2
+  image_picker: ^0.6.7+22
+  multi_image_picker: ^4.7.15
+  flutter_absolute_path: ^1.0.6
+
+
 
 
 dev_dependencies:
